--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="text_wrapper">
             <img src="a8.png" alt="">
             <div class="text">
-                小姐姐，我好喜欢你，你愿意做我女朋友吗？
+                罗苗苗，我好喜欢你，我错了，你愿意原谅我吗？
             </div>
         </div>
     </div>
